--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -80,4 +80,120 @@ height:auto;
   background-color: var(--bs-tertiary-bg);
 }
 
+html,
+body {
+  height: 100%;
+}
 
+body {
+    /*background: rgba(255, 255, 255, 0) url('../img/sakura.jpg'); 画像ファイルがCSSファイルの親ディレクトリにある場合 */
+    font-family: 'Arial', sans-serif;
+    background-size: cover;
+    background-position: center;
+}
+
+        .registration {
+            background-color: #ffffff; /* 資格の背景色を設定 */
+            padding: 20px; /* 内側の余白を追加 */
+            border-radius: 10px; /* 資格を角丸にする */
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 影を追加 */
+        }
+
+        .registration-form {
+            margin-top: 20px; /* フォームと資格の間に余白を追加 */
+        }
+
+.form-signin {
+            width: 100%;
+            max-width: 400px;
+            padding: 15px;
+            margin: auto;
+
+        }
+
+        .form-signin img {
+            width: 72px;
+            height: 57px;
+            margin-bottom: 1.5rem;
+        }
+
+        .form-signin h1 {
+            font-family: 'Cherry Swash', cursive;
+            margin-bottom: 1.5rem;
+
+        }
+
+        .form-floating {
+            margin-bottom: 1rem;
+        }
+
+        .form-floating label {
+            margin-left: 1rem;
+        }
+
+        .form-floating input {
+            padding: .375rem .75rem;
+            font-size: 1rem;
+            border-radius: .25rem;
+        }
+
+        .form-floating button {
+            padding: .75rem;
+            font-size: 1rem;
+            border-radius: .25rem;
+        }
+
+        .login-form {
+             border:dotted 5px #e2c2b3;/*線の種類・太さ・色*/
+             padding: 20px;
+                }
+
+        .to-register-page {
+            text-align: center;
+            margin-top: 1rem;
+        }
+
+        .back-to-top {
+            margin-top: 1rem;
+            text-align: center;
+        }
+        .card {
+            height: 100%;
+        }
+        .card-img {
+            max-width: 100%; /* 画像の最大幅を100%に */
+            max-height: 150px; /* 画像の最大高さを調整 */
+            object-fit: cover; /* 画像を切り抜いて表示 */
+        }
+
+        .register-new-member {
+
+
+        }
+
+        .register-new-member {
+              position: relative;
+              padding: 1.5rem 2.5rem;
+              border: 4px solid #000;
+            border-style: outset;
+        }
+
+        .register-new-member :before {
+          position: absolute;
+          top: 4px;
+          left: 4px;
+          width: calc(100% - 8px);
+          height: calc(100% - 8px);
+          content: '';
+          border: 4px dotted #000;
+        }
+
+
+        .register-new-member p {
+            line-height: 1.5;
+        }
+
+.all-book-image {
+max-height:100px;
+width:auto;
+}
