--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,40 +1,47 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>サインインページ</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN">
+    <!-- CSSの設定ファイル -->
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
 </head>
-<body>
-<div class="login">
-    <div class="main">
-        <form action="my-page.html" th:action="@{/login-to-my-page}" method="post">
-            <div class="to-login">
-                <div class="email">
-                    <label for="email">メールアドレス:</label>
-                    <input type="text" name="email" id="email">
-                </div>
-                <div class="password"><label for="password">パスワード:</label>
-                    <input type="password" name="password" id="password">
-                </div>
-            </div>
-            <button class="btn btn-primary">ログイン</button>
-        </form>
-        <div class="registration-to-user">
-            <div class="to-registration-page">
-                <a href="registration" th:href="@{/to-registration-page}" class="btn btn-secondary">会員登録はこちら</a>
-            </div>
-        </div>
-        <div class="back-to-top">
-            <a href="top.html" th:href="@{/back}" class="btn btn-secondary">戻る</a>
-        </div>
+<body class="py-4 bg-body-tertiary">
+<main class="form-signin">
 
+    <form class="text-center" th:action="@{/login-to-my-page}" method="post" th:object="${userForm}">
+        <img class="mb-4" th:src="@{/img/book.png}" alt="" loading="lazy">
+        <h1 class="h3 mb-3 fw-normal">ログイン画面</h1>
+        <div class="login-form">
+
+
+        <div class="form-floating">
+            <input type="text" name="email" id="email" class="form-control validate[required]" th:field="*{email}" placeholder=" ">
+            <label for="email">メールアドレス</label>
+            <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color:red;"></div>
+        </div>
+        <div class="form-floating">
+            <input type="password" name="password" id="password" class="form-control validate[required]" th:field="*{password}" placeholder=" ">
+            <label for="password">パスワード</label>
+            <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color:red;"></div>
+        </div>
+        <button class="btn btn-primary w-100 py-2" type="submit">ログイン</button>
+        </div>
+    </form>
+    <div class="to-register-page">
+        <a href="registration.html" th:href="@{/to-registration-page}">会員登録はこちら</a>
     </div>
+    <div class="back-to-top">
+        <form action="" th:action="@{/back}" method="get">
+            <button class="btn btn-secondary">戻る</button>
+        </form>
+    </div>
+</main>
 
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script rel="stylesheet" th:src="@{/js/form.js}"></script>
 </body>
 </html>
