--- a/src/main/resources/templates/my-page.html
+++ b/src/main/resources/templates/my-page.html
@@ -3,17 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>my-page</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
+<!-- マイページの一部 -->
 <div class="my-page">
     <div class="main">
         <p>ようこそ:</p>
+        <input type="hidden" th:value="${session.userId}">
+        <span th:text="${session.firstName}">さん</span>
 
+        <!-- 借りている本の一覧を表示 -->
+        <div th:each="book : ${loanedBooks}">
+            <h2 class="book" th:text="${book.title}"></h2>
+            <p class="book">
+                <span th:text="${book.publicationDate}"></span>
+            </p>
+            <p class="book-detail-author">
+                <span th:text="${book.author}"></span>
+            </p>
+            <p class="book-detail-genre">
+                <span th:text="${book.genre}"></span>
+            </p>
+            <p class="book-detail-status">
+                <span th:text="${book.status}"></span>
+            </p>
+            <form action="" th:action="@{/return}" method="post">
+                    <!-- userId を hidden フィールドとしてフォームに含める -->
+                <input type="hidden" name="userId" th:value="${userId}" />
+                <!-- bookId を hidden フィールドとしてフォームに含める -->
+                    <input type="hidden" name="bookId" th:value="${book.bookId}" />
+                    <button type="submit">返却</button>
+                </form>
+
+        </div>
+
+        <div class="back-to-top">
+            <a href="top.html" th:href="@{/top}">戻る</a>
+        </div>
     </div>
-
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
