--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -3,34 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>search</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-<div class="search-book-list">
-    <p>検索結果画面</p>
-    <div th:each="book : ${books}">
-        <div class="row">
-            <div class="col">
-                <div class="search-book-title">
-                    <p>タイトル &nbsp;<span th:text="${book.title}"></span></p>
+<div class="container">
+    <h1 class="display-4">検索結果画面</h1>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div th:each="book : ${books}" class="col">
+            <div class="card h-100">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${book.title}"></h5>
+                    <p class="card-text">出版年月日: <span th:text="${#dates.format(book.publicationDate, 'yyyy/MM/dd')}"></span></p>
+                    <p class="card-text">著者: <span th:text="${book.author}"></span></p>
                 </div>
-                <div class="search-book-year">
-                    <p>出版年月日 &nbsp;<span th:text="${#dates.format(book.publicationDate, 'yyyy/MM/dd')}"></span></p>
-                </div>
-                <div class="search-book-author">
-                    <p>著者 &nbsp;<span th:text="${book.author}"></span></p>
-                </div>
-            </div>
-            <div class="col">
-                <div class="search-book-image">
-                    <!-- HTML/Thymeleafで画像を表示する -->
-                    <img th:src="@{../generate/image_1.png}" alt="Generated Image">
-                </div>
+                <img th:src="@{/img/books/th.jpeg}" class="card-img" alt="Book Image">
             </div>
         </div>
     </div>
-
 </div>
-
-
+<div class="back-to-top">
+    <form action="top.html" th:action="@{/top}" method="get">
+        <button type="submit" class="btn btn-secondary">戻る</button>
+    </form>
+</div>
 </body>
 </html>
